Age category -> age group.

--- a/jupyter_english/assignments_fall2019/assignment1_pandas_olympic.ipynb
+++ b/jupyter_english/assignments_fall2019/assignment1_pandas_olympic.ipynb
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__8. What are the most and least frequent age categories among the participants of the 2008 Olympics?__\n",
+    "__8. What are the most and least common age groups among the participants of the 2008 Olympics?__\n",
     "\n",
     "*For discussions, please stick to [ODS Slack](https://opendatascience.slack.com/), channel #mlcourse_ai_news, pinned thread #a1_q6-10_fall2019*\n",
     "\n",
