--- a/jupyter_english/topic05_ensembles_random_forests/topic5_part3_feature_importance.ipynb
+++ b/jupyter_english/topic05_ensembles_random_forests/topic5_part3_feature_importance.ipynb
@@ -59,6 +59,8 @@
    "source": [
     "### Permutation importance\n",
     "\n",
+    "Inspired by [this](https://www.researchgate.net/publication/5231126_Conditional_Variable_Importance_for_Random_Forests) article.",
+    "\n",
     "The average reduction in accuracy caused by a variable is determined during the calculation of the out-of-bag error. The greater the reduction in accuracy due to an exclusion or permutation of the variable, the higher its *importance score*. For this reason, variables with a greater average reduction in accuracy are generally more significant for classification.\n",
     "\n",
     "The rationale for calculating permutation importance is the following: By randomly permuting the predictor variable $X_j$, its original association with the response $Y$ is broken. When the permuted variable $X_j$, together with all the others non-permuted variables, is used the response for the out-of-bag observations, the prediction *accuracy* decreases substantially if the original $X_j$ was associated with response. Thus, as a measure of variable importance, the difference in prediction accuracy before and after permuting is used."
@@ -177,6 +179,8 @@
    "metadata": {},
    "source": [
     "## 3. Sklearn Random Forest Feature Importance\n",
+    "\n",
+    "Inspired by [this](https://medium.com/@srnghn/the-mathematics-of-decision-trees-random-forest-and-feature-importance-in-scikit-learn-and-spark-f2861df67e3) article.",
     "\n",
     "Sklearn library uses another approach to determine feature importance. The rationale for that method is that the more gain in information the node (with splitting feature $X_j$) provides, the higher its importance.\n",
     "\n",
