fix links to live session 1 in quiz 1 solution

--- a/jupyter_english/quizzes_fall2019/quiz1_trees_forests_solution_fall2019.ipynb
+++ b/jupyter_english/quizzes_fall2019/quiz1_trees_forests_solution_fall2019.ipynb
@@ -55,7 +55,7 @@
     "\n",
     " **Comment:** 1 - classification, 2 - clustering, 3 - regression, 4 - ranking\n",
     " \n",
-    "**<font color='red'>Grading-wise:</font> Option 1 will also be treated as a correct answer, see [Live Session 1](https://www.youtube.com/channel/UCgGADKKGalfwSNbpSyM5ryg/live). So correct choices are 1 or 4 or both 1 and 4.**"
+    "**<font color='red'>Grading-wise:</font> Option 1 will also be treated as a correct answer, see [Live Session 1](https://www.youtube.com/watch?v=EEjjENNH3J0). So correct choices are 1 or 4 or both 1 and 4.**"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "**Solution:** if we set `max_features` to 1, then we'll be using only 1 feature, and accuracy will be poor.\n",
     "`min_samples_leaf` and `max_depth` play similar roles - these can be set so that a decision tree can grow large enough to fit to the decisison function in question. So `min_samples_leaf` shall be low enough (up to 1), while `max_depth` shall be big enough (up to -1, i.e. maximal possible depth). Choosing different  `criterion`s shall not hurt accuracy.\n",
     "\n",
-    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/channel/UCgGADKKGalfwSNbpSyM5ryg/live)**"
+    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/watch?v=EEjjENNH3J0).**"
    ]
   },
   {
@@ -360,7 +360,7 @@
     "\n",
     " **Solution:** The jagged decision boundary built by a tree is explained by some rules which are applicable only to a small (even 1) number of training instances. \n",
     " \n",
-    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/channel/UCgGADKKGalfwSNbpSyM5ryg/live)**"
+    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/watch?v=EEjjENNH3J0)**"
    ]
   },
   {
@@ -373,7 +373,7 @@
     " \n",
     " **Solution:** False. Random Forest doesn't learn that. Linear models do instead. \n",
     " \n",
-    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/channel/UCgGADKKGalfwSNbpSyM5ryg/live)**\n",
+    "**<font color='red'>Grading-wise:</font> all participants will get full credits for this question, see [Live Session 1](https://www.youtube.com/watch?v=EEjjENNH3J0)**\n",
     "\n",
     "**Question 9.** Suppose we fit `RandomForestRegressor` to predict age of a customer (a real task actually, good for targeting ads), and the maximal age seen in the dataset is 98 years. Is it possible that for some customer in future the model predicts his/her age to be 105 years?\n",
     " - Yes\n",
