small typo in Quiz 2

--- a/jupyter_english/quizzes_fall2019/quiz2_linear_models.ipynb
+++ b/jupyter_english/quizzes_fall2019/quiz2_linear_models.ipynb
@@ -9,7 +9,7 @@
     "    \n",
     "## [mlcourse.ai](https://mlcourse.ai) – Open Machine Learning Course \n",
     "\n",
-    "Authorы: [Yury Kashnitsky](https://yorko.github.io) (@yorko), and Aidar Siraev (@cyber). This material is subject to the terms and conditions of the [Creative Commons CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) license. Free use is permitted for any non-commercial purpose.\n",
+    "Authors: [Yury Kashnitsky](https://yorko.github.io) (@yorko), and Aidar Siraev (@cyber). This material is subject to the terms and conditions of the [Creative Commons CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) license. Free use is permitted for any non-commercial purpose.\n",
     "\n",
     "# <center> Fall 2019. Quiz 2. Linear Models"
    ]
