quiz 2 change on of options in question 8

--- a/jupyter_english/quizzes_fall2019/quiz2_linear_models.ipynb
+++ b/jupyter_english/quizzes_fall2019/quiz2_linear_models.ipynb
@@ -163,7 +163,7 @@
     "**Select all correct statements:**\n",
     " 1. the model is _penalized_ (meaning that the loss is positive) even in case when a training instance is correctly classified\n",
     " 2. logarithmic loss is a strictly decreasing function of margin $M$\n",
-    " 3. derivative $\\frac{dL}{dM}$ can be interpreted in terms of margin $M$: $\\frac{dL}{dM} = -\\sigma(M)$\n",
+    " 3. derivative $\\frac{dL}{dM}$ can be interpreted in terms of margin $M$: $\\frac{dL}{dM} = -\\sigma(-M)$\n",
     " 4. second derivative $\\frac{d^2L}{dM^2}$ is strictly positive, meaning that $L$ is convex\n",
     " \n",
     "*For discussions, please stick to [ODS Slack](https://opendatascience.slack.com/), channel #mlcourse_ai_news, pinned thread __#quiz2\\_q6-10__*"
