--- a/jupyter_english/quizzes_fall2019/quiz1_trees_forests.ipynb
+++ b/jupyter_english/quizzes_fall2019/quiz1_trees_forests.ipynb
@@ -109,6 +109,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import datasets\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = datasets.load_iris()\n",
+    "X = data.data\n",
+    "y = data.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=4,\n",
+       "                       max_features=None, max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
+       "                       random_state=17, splitter='best')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree = DecisionTreeClassifier(max_depth=4, random_state=17)\n",
+    "tree.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pydotplus #pip install pydotplus\n",
+    "from sklearn.tree import export_graphviz\n",
+    "\n",
+    "def tree_graph_to_png(tree, feature_names, png_file_to_save):\n",
+    "    tree_str = export_graphviz(tree, feature_names=feature_names, \n",
+    "                                     filled=True, out_file=None)\n",
+    "    graph = pydotplus.graph_from_dot_data(tree_str)  \n",
+    "    graph.write_png(png_file_to_save)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_graph_to_png(tree=tree, feature_names=['x1', 'x2', 'x3', 'x4'], \n",
+    "                  png_file_to_save='../../img/topic3_decision_tree1.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
