--- a/jupyter_english/assignments_fall2019/assignment4_time_series.ipynb
+++ b/jupyter_english/assignments_fall2019/assignment4_time_series.ipynb
@@ -210,12 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here\n",
-    "# X_train, X_test, y_train, y_test = "
+    "X_train, X_test, y_train, y_test = prepareData(df, lag_start=12, lag_end=48, test_size=0.3)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -227,11 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -245,12 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4490.220369495319\n",
+      "[-4237.82640569 -5658.43408711 -5300.28588386 -3760.75839108\n",
+      " -3493.79707973]\n"
+     ]
+    }
+   ],
    "source": [
-    "# You code here\n",
-    "# tscv = "
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "c = cross_val_score(lr, X_train_scaled, y_train, scoring='neg_mean_absolute_error', cv=tscv)\n",
+    "print(-1 * c.mean())\n",
+    "print(c)"
    ]
   },
   {
